--- a/art.html
+++ b/art.html
@@ -212,6 +212,12 @@
         <div class="cover-tile" data-title="Burnline — Issue 01" data-artist="Burnline Editorial">
           <img src="Burnline Issue 01.png" alt="Burnline Issue 01 cover">
         </div>
+        <div class="cover-tile" data-title="Burnline — Issue 02" data-artist="Burnline Editorial">
+          <img src="Burnline Issue 02.png" alt="Burnline Issue 02 cover">
+        </div>
+        <div class="cover-tile" data-title="Burnline — Issue 03" data-artist="Burnline Editorial">
+          <img src="Burnline Issue 03.png" alt="Burnline Issue 03 cover">
+        </div>
       </div>
     </div>
   </section>
