--- a/art.html
+++ b/art.html
@@ -96,12 +96,13 @@
 
     /* Artwork grid */
     .section-heading { text-align: left; margin-top: 2.5rem; } /* left align per request */
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      padding: 2rem 0 1rem;
-    }
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 280px); /* fixed tile width */
+  justify-content: center; /* center the grid if fewer than full row */
+  gap: 2rem;
+  padding: 2rem 0 1rem;
+}
     .art-tile {
       background: #1a1c30;
       border-radius: 10px;
