--- a/art.html
+++ b/art.html
@@ -1,3 +1,5 @@
+Art functional 9/2
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,18 +116,6 @@
       gap: 2rem;
       padding: 2rem 0 1rem;
     }
-    @media (min-width: 900px) {
-  .gallery-grid {
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-  }
-
-  /* optional: center a single art tile */
-  .gallery-grid:has(> .art-tile:only-child) > .art-tile {
-    grid-column: 2;
-  }
-}
-
     .art-tile {
       background: #1a1c30;
       border-radius: 10px;
