--- a/art.html
+++ b/art.html
@@ -81,17 +81,27 @@
       margin-top: 1.25rem;
     }
     /* Preserve original 3-up size at desktop and center a single cover */
+/* Desktop: keep 3-up size and left-align incomplete rows */
 @media (min-width: 900px) {
   .cover-grid {
-    /* force the same three columns you had when 3 items were present */
     grid-template-columns: repeat(3, 1fr);
-    justify-items: center; /* keeps each tile centered in its column */
+    justify-items: start;   /* align tiles to the left of each column */
+  }
+  /* If there's exactly one cover, keep it in the LEFT column */
+  .cover-grid:has(> .cover-tile:only-child) > .cover-tile {
+    grid-column: 1;
   }
 
-  /* If there's exactly one cover-tile, place it in the middle column */
-  .cover-grid:has(> .cover-tile:only-child) > .cover-tile {
-    grid-column: 2;
+  .gallery-grid {
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: start;   /* left-align tiles in incomplete rows */
   }
+  /* Optional: if a single art tile remains, keep it in the LEFT column */
+  .gallery-grid:has(> .art-tile:only-child) > .art-tile {
+    grid-column: 1;
+  }
+}
+
 }
     .cover-tile {
       cursor: pointer;
