--- a/stories.html
+++ b/stories.html
@@ -130,7 +130,7 @@
   <section class="page-intro">
     <div class="intro-inner">
       <h1 class="gradient-heading">Featured Stories</h1>
-      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline. This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd like.</p>
+      <p><strong>Editor-selected cyberpunk short fiction</strong> from across Burnline. This page features standout stories in one place so that you can read them in-browser instead of via digital flipbook, if you'd prefer.</p>
           <p>
       Interested in having your work featured in the next issue? <a href="submit.html" class="gradient-blue-text">Visit our Submit page.</a>
     </p>
