--- a/staffpicks.html
+++ b/staffpicks.html
@@ -292,6 +292,19 @@
       <!-- Games -->
       <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Citizen Sleeper">
         <img src="CS Keyart.png" alt="">
+        <h3>1000xRESIST</h3>
+        <small>Jump Over the Age / Fellow Traveller</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
+            <p class="steam-link">
+              <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
+        <img src="CS Keyart.png" alt="">
         <h3>Citizen Sleeper</h3>
         <small>Jump Over the Age / Fellow Traveller</small>
         <div class="card-overlay">
