--- a/staffpicks.html
+++ b/staffpicks.html
@@ -292,19 +292,6 @@
       <!-- Games -->
       <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Citizen Sleeper">
         <img src="CS Keyart.png" alt="">
-        <h3>1000xRESIST</h3>
-        <small>Jump Over the Age / Fellow Traveller</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
-        <img src="CS Keyart.png" alt="">
         <h3>Citizen Sleeper</h3>
         <small>Jump Over the Age / Fellow Traveller</small>
         <div class="card-overlay">
@@ -401,23 +388,9 @@
         </div>
       </div>
 
-            <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Perfect Dark">
-        <img src="Perfect Dark.jpg" alt="">
-        <h3>Perfect Dark</h3>
-        <small>Ubisoft</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
-
       <!-- Books -->
       <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
-        <img src="Neuromancer.jpg" alt="">
+        <img src="Neuromancer.png" alt="">
         <h3>Neuromancer</h3>
         <small>William Gibson</small>
         <div class="card-overlay">
@@ -442,23 +415,23 @@
         </div>
       </div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Count Zero">
-        <img src="Count Zero.jpg" alt="">
-        <h3>Count Zero</h3>
+      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Pattern Recognition">
+        <img src="Pattern Recognition.jpg" alt="">
+        <h3>Pattern Recognition</h3>
         <small>William Gibson</small>
         <div class="card-overlay">
           <div class="overlay-content">
-            William Gibson’s Count Zero drops you into a neon-lit tangle of mercenaries, hackers, and art dealers whose lives collide inside the shifting landscape of cyberspace. It’s a fast, layered ride where street-level grit meets an emerging godlike AI that’s rewriting the rules of Gibson’s cyberpunk world..
+            A post-9/11 exploration of identity, branding, and connection.
             <br><br>
             Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
           </div>
         </div>
       </div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Altered Carbon">
-        <img src="Altered Carbon.jpg" alt="">
-        <h3>Altered Carbon</h3>
-        <small>Richard Morgan</small>
+      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Cryptonomicon">
+        <img src="Cryptonomicon.jpg" alt="">
+        <h3>Cryptonomicon</h3>
+        <small>Neal Stephenson</small>
         <div class="card-overlay">
           <div class="overlay-content">
             A sprawling tale of code, war, and information age power.
@@ -472,45 +445,6 @@
         <img src="Synners.jpg" alt="">
         <h3>Synners</h3>
         <small>Pat Cadigan</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A prescient look at digital identity and networked consciousness.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-            <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Blame!">
-        <img src="Blame!.jpg" alt="">
-        <h3>Blame!</h3>
-        <small>Tsutomu Nihei</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A prescient look at digital identity and networked consciousness.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-                  <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Burning Chrome">
-        <img src="Burning Chrome.png" alt="">
-        <h3>Burning Chrome</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A prescient look at digital identity and networked consciousness.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
-
-                        <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Schismatrix Plus">
-        <img src="Schismatrix Plus.jpg" alt="">
-        <h3>Schismatrix Plus</h3>
-        <small>Bruce Sterling</small>
         <div class="card-overlay">
           <div class="overlay-content">
             A prescient look at digital identity and networked consciousness.
@@ -539,27 +473,9 @@
         </div>
       </div>
 
-            <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Ghost in the Shell: Stand Alone Complex">
-        <img src="Ghost in the Shell SAC.png" alt="">
-        <h3>Ghost in the Shell: Stand Alone Complex</h3>
-        <small>Mamoru Oshii</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A philosophical dive into cybernetic identity.</div>
-        </div>
-      </div>
-
       <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for PLUTO">
         <img src="PLUTO.jpg" alt="">
         <h3>PLUTO</h3>
-        <small>Naoki Urasawa / Netflix</small>
-        <div class="card-overlay">
-          <div class="overlay-content">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
-        </div>
-      </div>
-
-            <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Blade Runner 2049">
-        <img src="BLaderunner 2049.jpg" alt="">
-        <h3>Blade Runner 2049</h3>
         <small>Naoki Urasawa / Netflix</small>
         <div class="card-overlay">
           <div class="overlay-content">A noir robot drama reimagining Astro Boy's greatest story arc.</div>
