--- a/staffpicks.html
+++ b/staffpicks.html
@@ -304,6 +304,20 @@
         </div>
       </div>
 
+            <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for 1000xRESIST">
+        <img src="Ruiner Keyart.jpg" alt="">
+        <h3>1000xRESIST</h3>
+        <small>Reikon Games</small>
+        <div class="card-overlay">
+          <div class="overlay-content">
+            If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+            <p class="steam-link">
+              <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+            </p>
+          </div>
+        </div>
+      </div>
+
       <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Ruiner">
         <img src="Ruiner Keyart.jpg" alt="">
         <h3>Ruiner</h3>
