--- a/staffpicks.html
+++ b/staffpicks.html
@@ -305,7 +305,7 @@
       </div>
 
             <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for 1000xRESIST">
-        <img src="Ruiner Keyart.jpg" alt="">
+        <img src="1000xResist.png" alt="">
         <h3>1000xRESIST</h3>
         <small>Reikon Games</small>
         <div class="card-overlay">
