--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </a>
     <a href="staffpicks.html" class="card-link">
       <div class="card">
-        <img src="1000xRESIST.png" alt="Staff Picks image">
+        <img src="1000xResist.png" alt="Staff Picks image">
         <h3>Staff Picks</h3>
       </div>
     </a>
@@ -314,6 +314,7 @@
   </script>
 </body>
 </html>
+
 
 
 
