--- a/staffpicks.html
+++ b/staffpicks.html
@@ -403,70 +403,149 @@
       </div>
 
       <!-- Books -->
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
-        <img src="Neuromancer.png" alt="">
-        <h3>Neuromancer</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            If you're here and you haven't read this yet, why? This is the one. Don't overthink it.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
+    <!-- Books -->
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Altered Carbon">
+  <img src="AlteredCarbon.jpg" alt="">
+  <h3>Altered Carbon</h3>
+  <small>Richard K. Morgan</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A hardboiled cyberpunk noir where consciousness can be transferred between bodies. Brutal, fast-paced, and unforgettable.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Mirrorshades">
-        <img src="Mirrorshades.jpg" alt="">
-        <h3>Mirrorshades</h3>
-        <small>Edited by Bruce Sterling</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            An anthology that defined the cyberpunk movement.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Blame!">
+  <img src="Blame.jpg" alt="">
+  <h3>Blame!</h3>
+  <small>Tsutomu Nihei</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A dark manga epic set in an endless megastructure where humans fight for survival. Sparse dialogue, towering visuals, and pure atmosphere.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Pattern Recognition">
-        <img src="Pattern Recognition.jpg" alt="">
-        <h3>Pattern Recognition</h3>
-        <small>William Gibson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A post-9/11 exploration of identity, branding, and connection.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Burning Chrome">
+  <img src="BurningChrome.jpg" alt="">
+  <h3>Burning Chrome</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A short story collection that cemented Gibson as cyberpunk’s voice. Includes the iconic title story and the first appearance of the word “cyberspace.”
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Cryptonomicon">
-        <img src="Cryptonomicon.jpg" alt="">
-        <h3>Cryptonomicon</h3>
-        <small>Neal Stephenson</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A sprawling tale of code, war, and information age power.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Count Zero">
+  <img src="CountZero.jpg" alt="">
+  <h3>Count Zero</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      The second book in the Sprawl trilogy, weaving corporate intrigue and voodoo-like AI entities. Less famous than <i>Neuromancer</i> but equally sharp.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Synners">
-        <img src="Synners.jpg" alt="">
-        <h3>Synners</h3>
-        <small>Pat Cadigan</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            A prescient look at digital identity and networked consciousness.
-            <br><br>
-            Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section. If they have a used section, this book will cost you like $4 and you'll support the good guys instead of the mega-corp.
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Cryptonomicon">
+  <img src="Cryptonomicon.jpg" alt="">
+  <h3>Cryptonomicon</h3>
+  <small>Neal Stephenson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A sprawling tale of code, war, and information age power.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Mirrorshades">
+  <img src="Mirrorshades.jpg" alt="">
+  <h3>Mirrorshades</h3>
+  <small>Edited by Bruce Sterling</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      An anthology that defined the cyberpunk movement.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
+  <img src="Neuromancer.png" alt="">
+  <h3>Neuromancer</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      If you're here and you haven't read this yet, why? This is the one. Don't overthink it.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Pattern Recognition">
+  <img src="Pattern Recognition.jpg" alt="">
+  <h3>Pattern Recognition</h3>
+  <small>William Gibson</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A post-9/11 exploration of identity, branding, and connection.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Schismatrix Plus">
+  <img src="SchismatrixPlus.jpg" alt="">
+  <h3>Schismatrix Plus</h3>
+  <small>Bruce Sterling</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A sweeping vision of posthuman evolution and political conflict in space. Sterling’s definitive statement on cyberpunk’s reach beyond Earth.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Synners">
+  <img src="Synners.jpg" alt="">
+  <h3>Synners</h3>
+  <small>Pat Cadigan</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A prescient look at digital identity and networked consciousness.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
+
+<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Titanium Noir">
+  <img src="TitaniumNoir.jpg" alt="">
+  <h3>Titanium Noir</h3>
+  <small>Nick Harkaway</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A slick blend of futuristic biotech and classic detective noir. A murder mystery where genetic elites loom over the shadows of society.
+      <br><br>
+      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
+    </div>
+  </div>
+</div>
 
       <!-- Film and TV -->
       <div class="story-card" data-category="film" tabindex="0" aria-label="Open details for Cyberpunk Edgerunners">
