--- a/staffpicks.html
+++ b/staffpicks.html
@@ -405,7 +405,7 @@
       <!-- Books -->
     <!-- Books -->
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Altered Carbon">
-  <img src="AlteredCarbon.jpg" alt="">
+  <img src="Altered Carbon.jpg" alt="">
   <h3>Altered Carbon</h3>
   <small>Richard K. Morgan</small>
   <div class="card-overlay">
@@ -418,7 +418,7 @@
 </div>
 
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Blame!">
-  <img src="Blame.jpg" alt="">
+  <img src="Blame!.jpg" alt="">
   <h3>Blame!</h3>
   <small>Tsutomu Nihei</small>
   <div class="card-overlay">
@@ -431,7 +431,7 @@
 </div>
 
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Burning Chrome">
-  <img src="BurningChrome.jpg" alt="">
+  <img src="Burning Chrome.png" alt="">
   <h3>Burning Chrome</h3>
   <small>William Gibson</small>
   <div class="card-overlay">
@@ -444,25 +444,12 @@
 </div>
 
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Count Zero">
-  <img src="CountZero.jpg" alt="">
+  <img src="Count Zero.jpg" alt="">
   <h3>Count Zero</h3>
   <small>William Gibson</small>
   <div class="card-overlay">
     <div class="overlay-content">
       The second book in the Sprawl trilogy, weaving corporate intrigue and voodoo-like AI entities. Less famous than <i>Neuromancer</i> but equally sharp.
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
-    </div>
-  </div>
-</div>
-
-<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Cryptonomicon">
-  <img src="Cryptonomicon.jpg" alt="">
-  <h3>Cryptonomicon</h3>
-  <small>Neal Stephenson</small>
-  <div class="card-overlay">
-    <div class="overlay-content">
-      A sprawling tale of code, war, and information age power.
       <br><br>
       <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
     </div>
@@ -483,7 +470,7 @@
 </div>
 
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Neuromancer">
-  <img src="Neuromancer.png" alt="">
+  <img src="Neuromancer.jpg" alt="">
   <h3>Neuromancer</h3>
   <small>William Gibson</small>
   <div class="card-overlay">
@@ -495,21 +482,8 @@
   </div>
 </div>
 
-<div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Pattern Recognition">
-  <img src="Pattern Recognition.jpg" alt="">
-  <h3>Pattern Recognition</h3>
-  <small>William Gibson</small>
-  <div class="card-overlay">
-    <div class="overlay-content">
-      A post-9/11 exploration of identity, branding, and connection.
-      <br><br>
-      <i>Please don't buy this on Amazon. Instead, find a local bookstore with a good sci-fi section.</i>
-    </div>
-  </div>
-</div>
-
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Schismatrix Plus">
-  <img src="SchismatrixPlus.jpg" alt="">
+  <img src="Schismatrix Plus.jpg" alt="">
   <h3>Schismatrix Plus</h3>
   <small>Bruce Sterling</small>
   <div class="card-overlay">
