--- a/staffpicks.html
+++ b/staffpicks.html
@@ -289,120 +289,133 @@
 
     <!-- Single panel showing grid; filtering switches visible cards -->
     <div id="panel-grid" class="story-grid" role="tabpanel" tabindex="0" aria-labelledby="tab-books">
-      <!-- Games -->
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Citizen Sleeper">
-        <img src="CS Keyart.png" alt="">
-        <h3>Citizen Sleeper</h3>
-        <small>Jump Over the Age / Fellow Traveller</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<!-- Games -->
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for 1000xRESIST">
+  <img src="1000xResist.png" alt="">
+  <h3>1000xRESIST</h3>
+  <small>Reikon Games</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-            <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for 1000xRESIST">
-        <img src="1000xResist.png" alt="">
-        <h3>1000xRESIST</h3>
-        <small>Reikon Games</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Citizen Sleeper">
+  <img src="CS Keyart.png" alt="">
+  <h3>Citizen Sleeper</h3>
+  <small>Jump Over the Age / Fellow Traveller</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      Cyberpunk on a spacestation with a vibe as good as any. This is one of our all-time favorite pieces of cyberpunk media. The gameplay loop might not be for everyone, but the story and dialogue is as good as it gets.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/1578650/Citizen_Sleeper/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Ruiner">
-        <img src="Ruiner Keyart.jpg" alt="">
-        <h3>Ruiner</h3>
-        <small>Reikon Games</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Cloudpunk">
+  <img src="Cloudpunk Keyart.jpg" alt="">
+  <h3>Cloudpunk</h3>
+  <small>ION Lands</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Ghostrunner">
-        <img src="Ghostrunner Keyart.jpg" alt="">
-        <h3>Ghostrunner</h3>
-        <small>One More Level</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Like the sword parts of cyberpunk? Play this game.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Cyberpunk 2077">
+  <img src="CP2077 Keyart.jpg" alt="">
+  <h3>Cyberpunk 2077</h3>
+  <small>CD Projekt Red</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Cyberpunk 2077">
-        <img src="CP2077 Keyart.jpg" alt="">
-        <h3>Cyberpunk 2077</h3>
-        <small>CD Projekt Red</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            We'd love to have a clickier take, but it really is as good as advertised. We'd also imagine you wouldn't be on this website without already having played this game.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Far Cry 3: Blood Dragon">
+  <img src="FC3 Blood Dragon.jpg" alt="">
+  <h3>Far Cry 3: Blood Dragon</h3>
+  <small>Ubisoft</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Cloudpunk">
-        <img src="Cloudpunk Keyart.jpg" alt="">
-        <h3>Cloudpunk</h3>
-        <small>ION Lands</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Live out your cyberpunk delivery boy fantasy. Something about pixel art and neon works really, really well, too.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Ghostrunner">
+  <img src="Ghostrunner Keyart.jpg" alt="">
+  <h3>Ghostrunner</h3>
+  <small>One More Level</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      Like the sword parts of cyberpunk? Play this game.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/1139900/Ghostrunner/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Transistor">
-        <img src="Transistor Keyart.jpg" alt="">
-        <h3>Transistor</h3>
-        <small>Supergiant Games</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            You like Hades? Great news: those folks made a cyberpunk game.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/237930/Transistor/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Perfect Dark">
+  <img src="PerfectDark.jpg" alt="">
+  <h3>Perfect Dark</h3>
+  <small>Rare</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      A legendary N64 shooter that blended futuristic espionage with inventive weapons and cyberpunk style. Joanna Dark remains one of the genre’s most iconic protagonists.
+      <p class="steam-link">
+        <a href="https://www.xbox.com/en-US/games/store/perfect-dark/9nblggh4rqql" target="_blank" rel="noopener noreferrer">Check it out here.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Far Cry 3: Blood Dragon">
-        <img src="FC3 Blood Dragon.jpg" alt="">
-        <h3>Far Cry 3: Blood Dragon</h3>
-        <small>Ubisoft</small>
-        <div class="card-overlay">
-          <div class="overlay-content">
-            Everyone knows Far Cry 3 was the best Far Cry, and the retro-futuristic '80s action parody dlc matches that speed.
-            <p class="steam-link">
-              <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
-            </p>
-          </div>
-        </div>
-      </div>
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Ruiner">
+  <img src="Ruiner Keyart.jpg" alt="">
+  <h3>Ruiner</h3>
+  <small>Reikon Games</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      If you like cyberpunk stuff and you like top-down shooters, it's pretty can't miss. Don't overthink the story; it's guns + gritty setting.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      <!-- Books -->
+<div class="story-card" data-category="games" tabindex="0" aria-label="Open details for Transistor">
+  <img src="Transistor Keyart.jpg" alt="">
+  <h3>Transistor</h3>
+  <small>Supergiant Games</small>
+  <div class="card-overlay">
+    <div class="overlay-content">
+      You like Hades? Great news: those folks made a cyberpunk game.
+      <p class="steam-link">
+        <a href="https://store.steampowered.com/app/237930/Transistor/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
+      </p>
+    </div>
+  </div>
+</div>
+
     <!-- Books -->
 <div class="story-card" data-category="books" tabindex="0" aria-label="Open details for Altered Carbon">
   <img src="Altered Carbon.jpg" alt="">
